added function to isolate a 20% test set. Need to fix function so that the same 20% is chosen if/when executed again

--- a/California Housing Price Prediction Model.ipynb
+++ b/California Housing Price Prediction Model.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "Name: ocean_proximity, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -546,6 +546,84 @@
     "import matplotlib.pyplot as plt\n",
     "housing.hist(bins=50, figsize=(20,15))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Let's look at the data and perform a \"sanity check\". Observe that the median income attribute does not appear to be plausible. It has a minimum of ~0 and a maximum of slightly over 1600. After consulting with the data source, we find out that the units for this attribute are not in USD; rather, the data is scaled and capped at ~15 and ~0.5. We'll take note of this.\n",
+    "\n",
+    "* We also notice that the median house value attribute is capped at ~500,000 USD. If we only work with this data, our algorithm may learn that there do not exist any houses whose value exceeds 500,000 USD. We will need to do something about this since predicting house values is the objective of this project. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a Test Set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, before looking at the data any further, we need to create and isolate a test set. It's important to do this early-on; otherwise, if we glance at the data and notice any patterns, these patterns may influence our choice of Machine Learning Model, which could potentially be either biased or overfitting to the test set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below defines a function ```split_train_test``` selects 20% of the dataset in random instances."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def split_train_test(data, test_ratio):\n",
+    "    shuffled_indices = np.random.permutation(len(data))\n",
+    "    test_set_size = int(len(data) * test_ratio)\n",
+    "    test_indices = shuffled_indices[:test_set_size]\n",
+    "    train_indices = shuffled_indices[test_set_size:]\n",
+    "    return data.iloc[train_indices], data.iloc[test_indices]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can call the function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16512 train + 4128 test\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_set, test_set = split_train_test(housing, 0.2)\n",
+    "print(len(train_set), \"train +\", len(test_set), \"test\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This works; we have set aside 16512 entries for the training set and 4128 entries for the test set. However, the problem with this code is that, if/when executed again, it will choose a different 4128 entries (it is random every time), so we need to figure out a way to maintain the same 20% entries."
    ]
   },
   {
